# resTOpres_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  ERROR_HANDLING.md  EXAMPLES.md  GITHUB_SETUP.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  output 2.fdb_latexmk  output 2.fls  output.fdb_latexmk  output_final_fixed.tex  pyproject.toml  requirements.txt  run.sh  test_15_slides_brief.tex
.github/workflows/: ci.yml
arXiv-2602.04843v1/: 00README.json  _iclr2025_conference.bib  arxiv_version.tex  iclr2026_conference.bib  presentation.tex
example/: main.bib  main.cls  main.tex  presentation.tex
src/agent/: beamer_generator.py  cli.py  config.py  content_extractor.py  gemini_client.py  hf_client.py  nvidia_client.py  presentation_agent.py  tex_cleaner.py  tex_parser.py
